--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,5 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/aakpdw3186/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/aakpdw3186/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aakpdw3186/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12679038.md#1" target="_blank">职场小秘方：简化作业流程 创造加值人力</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12679038.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1601191502452483-320x200.jpg" align ="left"></a>公司新创的项目越来越多，但是人力却越发吃紧，如何简化作业流程？笔者分享一个自己的亲身经历，希望能启发管理者的思考，进而做出更洽当的决策。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 10:17 PM	</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/11/n12679986.md#1" target="_blank">意大利医院前惊现巨大天坑 染疫病患疏散</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/11/n12679986.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230476852-320x200.jpg" align ="left"></a>1月8日，意大利一家医院前方的停车场出现巨大的天坑，不但吞噬了多部车辆，也切断了电力供应，使得院内收治的6名中共肺炎（武汉肺炎）病患紧急疏散，所幸这起事故没有造成人员伤亡......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 1:18 PM	</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/11/n12679885.md#1" target="_blank">热络的淡季 多项利好加持房市</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/11/n12679885.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_772615444-150x120.jpg" align ="left"></a>文：李欧?大纪元
+从去年十月份达到最高交易量，十一月、十二月交易开始放缓，这个“热络的淡季”是相当罕见的房市，近两个月降温幅度并不大，看2019年十二月数据，就能比较出传统淡季与2020年的不寻常（详见表一）。此外，十二月的千万级豪宅房市降温不少，仅有Palo Alto有卖出一户1,575万的超级豪房。
+
+202.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 1:17 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12679038.md#1" target="_blank">职场小秘方：简化作业流程 创造加值人力</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12679038.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1601191502452483-150x120.jpg" align ="left"></a>公司新创的项目越来越多，但是人力却越发吃紧，如何简化作业流程？笔者分享一个自己的亲身经历，希望能启发管理者的思考，进而做出更洽当的决策。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 10:17 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678623.md#1" target="_blank">英媒：英军特种部队受训 抵抗外星人入侵</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678623.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Fotolia_37955442_Subscription_L-150x120.jpg" align ="left"></a>英国媒体报导说，该国陆军特种部队“空降特勤队”（SAS）曾接受训练，以应对一系列的“非传统威胁”，其中包括外星人的可能入侵。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 5:34 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678537.md#1" target="_blank">长颈鹿也有短腿族 身高只有同类的一半</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678537.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/giraffe-4312090_1920-150x120.jpg" align ="left"></a>长颈鹿有长颈和长腿，所以身高超越其他动物。但科学家发现，长颈鹿中也有腿短的侏儒，其站立时的高度只有一般长颈鹿的一半，颇为罕见。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 3:18 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678413.md#1" target="_blank">越过北极 印航女飞行员将飞行世界最长航线</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/10/n12678413.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/plane-spotting-2311053_1920-150x120.jpg" align ="left"></a>印度航空公司（Air India）的女性飞行员将驾驶班机从美国旧金山直飞印度邦加罗尔（Bengaluru），不但会飞越北极，也将完成世界上最长的商业航线。这将是首次有完全由女性飞行员驾驶的班机飞行这样的航线。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 2:40 PM			</td></tr>
@@ -37,12 +42,6 @@
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12672247.md#1" target="_blank">脂肪肝不是胖才有！每天做2件事 逆转脂肪肝</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12672247.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_275721176-1-150x120.jpg" align ="left"></a>脂肪肝已成为全球最常见的慢性疾病之一，虽然不易察觉症状，不痛不痒，却可能发展成肝硬化、肝癌。因脂肪肝是代谢的问题，不当的饮食习惯、久坐、熬夜、高压、负面的情绪等都会直接、间接影响代谢，造成脂肪肝。幸好，脂肪肝可以逆转，且方法十分简单，每天都可做到。除了改善饮食，还要坚持走路和每天喝水。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月08日 10:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12672192.md#1" target="_blank">冬令进补四神汤最养生 正确炖煮才有效</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12672192.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/10/sishen-soup1-1022-150x120.jpg" align ="left"></a>坊间时常见到冬令进补的羊肉炉、姜母鸭、药膳排骨、烧酒鸡，多有加酒精食材及中药芳香温热特性的药材去炖煮，酒在于中医食物性质分类上属大辛大热，虽然炖煮过程满室生香，但性质却非常燥热。冬季气温骤降，好像人人都要来一点药膳补汤养生。其实，即便是手脚冰冷的人，也不一定适合吃太补的药膳。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月08日 10:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12673448.md#1" target="_blank">“翠鸟对峙”精彩照 获英国摄影大赛冠军</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12673448.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/et-photo-comp-webb-9-1200x720-150x120.jpg" align ="left"></a>一位来自英国普伯勒的摄影师凭借一张两只翠鸟在空中对峙的惊艳照片，赢得了2020年萨塞克斯野生动物信托基金会“走进野外”（Into the Wild）摄影比赛冠军。这张照片是在霍沙姆附近的沃纳姆自然保护区拍摄的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月07日 11:48 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/12/31/n12656730.md#1" target="_blank">怎样打扫才干净？家事职人分享清洁秘诀</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/12/31/n12656730.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/10/Fotolia_92396738_Subscription_L-150x120.jpg" align ="left"></a>透过每天、每周、每个月打扫的过程，可以渐进式地认清自己与物品之间的关系、自身的需求，以及多少物品量才能让家里维持整齐、舒适的状态。清扫是个渐进的过程，当有了正确认知后，就不会一再爆买、乱买，自然而然慢慢往简单生活靠拢。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月07日 10:51 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12672435.md#1" target="_blank">【重播】人体科学揭密：什么人容易染疫？</a><br></h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/7/n12672435.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1.7.21-Health-Live-web-150x120.jpg" align ="left"></a>人体科学揭密：什么人容易染疫，什么人不易染疫？
-
-疫苗接种开始紧锣密鼓，接种好还是等等好？什么人最好不接种？
-
-免疫缺失的人包括哪些人群，这些人可以打疫苗吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月07日 9:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/21/1/8/n12675988.md#1" target="_blank">珀斯每日逾50个首次置业者买房</a><br></h3>最新报告表明，在去年第三季度，每天都有超过50个首次置业者进入西澳房市买房，这在一定程度上归功于政府推行的建房补助。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 11:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008.htm">https://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
